Return AnalyticsLevelViewModel instead of TelemetryLevel
