# src/Umbraco.Cms.ManagementApi/Controllers/Analytics/AllAnalyticsController.cs
@@ -1,6 +1,7 @@
 ﻿using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
 using Umbraco.Cms.Core.Models;
+using Umbraco.Cms.ManagementApi.ViewModels.Analytics;
 using Umbraco.Cms.ManagementApi.ViewModels.Pagination;
 
 namespace Umbraco.Cms.ManagementApi.Controllers.Analytics;
@@ -9,14 +10,14 @@ public class AllAnalyticsController : AnalyticsControllerBase
 {
     [HttpGet("all")]
     [MapToApiVersion("1.0")]
-    [ProducesResponseType(typeof(PagedViewModel<TelemetryLevel>), StatusCodes.Status200OK)]
-    public async Task<PagedViewModel<TelemetryLevel>> GetAll(int skip, int take)
+    [ProducesResponseType(typeof(PagedViewModel<AnalyticsLevelViewModel>), StatusCodes.Status200OK)]
+    public async Task<PagedViewModel<AnalyticsLevelViewModel>> GetAll(int skip, int take)
     {
         TelemetryLevel[] levels = Enum.GetValues<TelemetryLevel>();
-        return await Task.FromResult(new PagedViewModel<TelemetryLevel>
+        return await Task.FromResult(new PagedViewModel<AnalyticsLevelViewModel>
         {
             Total = levels.Length,
-            Items = levels.Skip(skip).Take(take),
+            Items = levels.Skip(skip).Take(take).Select(x => new AnalyticsLevelViewModel { AnalyticsLevel = x }),
         });
     }
 }
